# Home_BESS

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_maintainer.md  hansesun_pv_auslesen.ipynb  pyproject.toml
.github/workflows/: tests.yml
data/: day_ahead_price_readout.ipynb  day_ahead_prices_readout.ipynb  energy_data_readout.ipynb
notebooks/: bess_simulation.ipynb  energy_data_readout.ipynb  forecasting.ipynb
openspec/: config.yaml
openspec/changes/archive/2026-02-23-build-energy-data-from-grid-csv/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-23-build-energy-data-from-grid-csv/specs/grid-csv-energy-data/: spec.md
openspec/specs/grid-csv-energy-data/: spec.md
scripts/: generate_energy_data_from_grid_csv.py  generate_synthetic_energy_data.py
src/: bess.ipynb  bess.py  bess_simulation.ipynb  bess_simulation.py  get_weather_data.py  mqtt.ipynb  mqtt.py
src/control/: config.py  config.toml  evaluation.ipynb  evaluation.py  mpc.py  optimize.py
src/forecasting/: forecasting.ipynb  forecasting.py
src/home_bess/control/: mpc.py
src/home_bess/interfaces/: mqtt.py
src/home_bess/simulation/: bess_simulation.py
src/interfaces/: get_day_ahead_prices.py  get_weather_data.py  mqtt.py  solar_edge_readout.ipynb
src/interfaces/modbus_solarege/: dbus-solaredge.py  dbus-solaredge_20260224_1847.py  modbus.ipynb
src/interfaces/mpc-heartbeat-service/: README.md  dbus-mpc-heartbeat.py  run
src/interfaces/mpc-heartbeat-service/log/: run
src/simulation/: bess_simulation.ipynb  bess_simulation.py  visualization.py  web_app.py
src/simulation/data/: epex_prices.csv  epex_prices_2025.csv  example_household_2025.csv  example_household_without_battery.csv
tests/: manual_test_mpc.py  pv_profile_1.csv  pv_profile_2.csv  test_csv_profiles.py  test_day_ahead_prices.csv  test_generate_energy_data_from_grid_csv.py  test_mpc.py  test_pv_surplus_charge.py
tests/data/: load_profile_1.csv  load_profile_2.csv  load_profile_3.csv  load_profile_4.csv  load_profile_5.csv  netload_profile_1.csv  netload_profile_2.csv  pv_profile_1.csv  pv_profile_3.csv
